<resources>
    <string name="logg_inn">Logg inn</string>
    <string name="logg_ut">Logg ut</string>

    <string name="app_name">AKKS</string>
    <string name="velkommen">Velkommen til AKKS sin øvingslokale-booking app!</string>
    <string name="loginbtn">Logg inn</string>
    <string name="reserver">Reserver lokale</string>
    <string name="bookinger">Mine bookinger</string>
    <string name="lokaler">Øvingslokaler</string>
    <string name="info">Om AKKS</string>

    <string name="personer_8">"8 personer</string>
    <string name="personer_6">"6 personer</string>
    <string name="personer_5">"5 personer</string>
    <string name="personer_45">"4 til 5 personer</string>
    <string name="personer_4">"4 personer</string>

    <string name="reserver2">Reserver</string>
    <string name="velg">Velg</string>
    <string name="innehold">Inneholder:</string>
    <string name="rom_a">Rom A - Apollon</string>
    <string name="rom_a_info">Blir ofte brukt til kurs, men er stort sett ledig på dagtid og i helger. Rommet er på 23,3 kvm og passer for band opptil 6 personer. Inneholder: 3 gitarforsterkere, 1 bassforsterker,  sanganlegg/PA med to mikrofoner, elpiano og slagverk. I tillegg har vi ekstra utstyr til kursene våre her.</string>
    <string name="rom_b">Rom B - Berntsen</string>
    <string name="rom_b_info">Rommet er på 20,9 kvm og passer for band opptil 4 til 5 personer. Inneholder: 3 gitarforsterkere, 1 bassforsterker,  sanganlegg/PA med to mikrofoner, elpiano og slagverk.</string>
    <string name="rom_c">Rom C - Cecilie</string>
    <string name="rom_c_info">Det minste lokalet vårt, på 14,6 kvm, og passer for band opptil 4 personer.Rommet har også DJ utstyr, to cdspillere med mikser. Inneholder: 3 gitarforsterkere, 1 bassforsterker,  sanganlegg/PA med to mikrofoner og slagverk.</string>
    <string name="rom_d">Rom D - Dennis</string>
    <string name="rom_d_info"> Stort og romslig lokale på 24,2 kvm som passer bra for større band og prosjekt opptil 8 personer. Her har vi også et akustisk piano. Inneholder: 3 gitarforsterkere, 1 bassforsterker,  sanganlegg/PA med tre mikrofoner, akustisk piano, elpiano og slagverk.</string>
    <string name="rom_e">Rom E - Evy</string>
    <string name="rom_e_info">Et stort og romslig lokale på 33,5 kvm som passer bra for større band og prosjekt opptil 8 personer, her har vi også litt kraftigere forsterkere. Inneholder: 3 gitarforsterkere, 1 bassforsterker, keyboard, sanganlegg/PA med tre mikrofoner og slagverk.</string>


    <string name="om_akks">AKKS Bergen holder til på kulturhuset USF Verftet. Her drifter vi 5 øvingslokaler og arrangerer de fleste av kursene våre. AKKS Bergen tilbyr instrument- og vokalkurs, bandkurs og utleie av øvingslokaler. I tillegg står vi bak UFLAKKS, konsertserien av og for ungsom, og arrangerer Lyden fra Øvingslokalet og rockefestivalen for ungdom –Eggstockfestivalen. AKKS er en idealistisk musikkorganisasjon som har som formål å arbeide for å rekruttere, motivere og synliggjøre flere kvinner i alle ledd av musikkbransjen.</string>

    <string name="res1_info1">Torsdag 17.11</string>
    <string name="res1_info2">Kl. 16.00–19.00</string>
    <string name="res1_kode">Dørkode: 4453</string>
    <string name="res2_info1">Torsdag 17.11</string>
    <string name="res2_info2">Kl. 19.00–22.00</string>
    <string name="res2_kode">Dørkode: 4453</string>


</resources>
