<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#757575"
    android:layout_centerVertical="true"
    tools:context="com.example.kristoffer.akks.MainActivity">

    <TextView
        android:id="@+id/reserver"
        style="@style/CategoryStyle"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="13dp"
        android:layout_marginTop="25dp"

        android:background="@color/categories"
        android:text="@string/reserver" />

    <TextView
        android:id="@+id/bookinger"
        style="@style/CategoryStyle"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="13dp"
        android:background="@color/categories"
        android:text="@string/bookinger" />

    <TextView
        android:id="@+id/lokaler"
        style="@style/CategoryStyle"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:gravity="center"
        android:layout_below="@+id/bookinger"

        android:layout_alignParentEnd="true"
        android:layout_marginRight="30dp"
        android:background="@color/categories"
        android:text="@string/lokaler" />

    <TextView
        android:id="@+id/om"
        style="@style/CategoryStyle"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:gravity="center"
        android:layout_below="@+id/reserver"

        android:layout_marginLeft="30dp"
        android:background="@color/categories"
        android:text="@string/info" />


</RelativeLayout>
