<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_rom_c"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.kristoffer.akks.MainActivity">

    <ImageView
        android:contentDescription="@string/rom_c"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@color/colorPrimary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:drawableEnd="@drawable/ic_stars_black_24dp"
        android:padding="8dp"
        android:text="@string/rom_c"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="@string/rom_a_info" />

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="8dp"
        android:background="@color/categories"
        android:text="@string/reserver2"
        android:textColor="@color/colorPrimary" />


</LinearLayout>
