<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_bookinger"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/bakgrunn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical"
        tools:context="com.example.kristoffer.akks.MainActivity">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_a"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:cardBackgroundColor="@color/categories"
            app:cardCornerRadius="2dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="8dp">

            <TextView
                android:id="@+id/textres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:text="@string/res1_info1"
                android:textAppearance="@android:style/TextAppearance.Material.Title"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_marginTop="30dp"
                android:text="@string/rom_b"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:layout_marginTop="30dp"
                android:text="@string/res1_info2"
                android:textColor="@android:color/black"
                android:textSize="18sp" />


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_b"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:cardBackgroundColor="@color/categories"
            app:cardCornerRadius="2dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:text="@string/res2_info1"
                android:textAppearance="@android:style/TextAppearance.Material.Title"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_marginTop="30dp"
                android:text="@string/rom_d"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:layout_marginTop="30dp"
                android:text="@string/res2_info2"
                android:textColor="@android:color/black"
                android:textSize="18sp" />


        </android.support.v7.widget.CardView>


    </LinearLayout>

</FrameLayout>