<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_reserver"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/bakgrunn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    tools:context="com.example.kristoffer.akks.MainActivity">

    <CalendarView
        android:id="@+id/reserverkalender"
        android:layout_width="match_parent"
        android:background="@color/cardview_dark_background"
        android:layout_height="300dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
        android:id="@+id/card_view_res_a"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:cardBackgroundColor="@color/categories"
        app:cardCornerRadius="2dp"
        app:contentPadding="8dp"
        app:cardUseCompatPadding="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/res1_info1"
            android:layout_gravity="top|end"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rom_b"
            android:layout_marginTop="30dp"
            android:layout_gravity="top|end"
            android:textColor="@android:color/black"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/res1_info2"
            android:layout_marginTop="30dp"
            android:layout_gravity="center|end"
            android:textColor="@android:color/black"
            android:textSize="18sp"/>


    </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
            android:id="@+id/card_view_res_b"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:cardBackgroundColor="@color/categories"
            app:cardCornerRadius="2dp"
            app:contentPadding="8dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/res2_info1"
                android:layout_gravity="top|end"
                android:textAppearance="@android:style/TextAppearance.Material.Title"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rom_a"
                android:layout_marginTop="30dp"
                android:layout_gravity="top|end"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/res2_info2"
                android:layout_marginTop="30dp"
                android:layout_gravity="center|end"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>


        </android.support.v7.widget.CardView>


        </LinearLayout>


    </ScrollView>





</LinearLayout>

    </FrameLayout>
