<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.kristoffer.akks.LokalerActivity">

        <TextView
            android:id="@+id/rom_a"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:background="@color/categories"
            android:padding="8dp"
            android:text="@string/rom_a"
            android:textAlignment="viewEnd"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/rom_b"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:padding="8dp"
            android:background="@color/categories"
            android:text="@string/rom_b"
            android:textAlignment="viewEnd"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/rom_c"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:padding="8dp"
            android:background="@color/categories"
            android:text="@string/rom_c"
            android:textAlignment="viewEnd"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/rom_d"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:padding="8dp"
            android:background="@color/categories"
            android:text="@string/rom_d"
            android:textAlignment="viewEnd"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/rom_e"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:padding="8dp"
            android:background="@color/categories"
            android:text="@string/rom_e"
            android:textAlignment="viewEnd"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@android:color/black"/>


    </LinearLayout>
</ScrollView>
